FLY wire David/force-app/main/default/objects/Contract/fields/Auto_Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Terms__c</fullName>
    <description>Auto renewal terms per Contract, sent from Spring CM to Salesforce.
12/13/22: Relabeled as OBS, removed from page layouts. Replaced by &apos;Renewal Terms&apos;.</description>
    <inlineHelpText>Renewal terms per Contract.</inlineHelpText>
    <label>OBS_Auto Renewal Terms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>