FLY wire David/force-app/main/default/objects/Contract/fields/Contract_Contains_WPM_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contract_Contains_WPM_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate the Contract also has a WPM Entity.</description>
    <inlineHelpText>Check box is this Contract contains WPM Entity, such as WPM Education or WPM Payment Security.</inlineHelpText>
    <label>Contract Contains WPM Entity</label>
    <type>Checkbox</type>
</CustomField>