FLY wire David/force-app/main/default/objects/Contract/fields/Contract_has_Auto_Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_has_Auto_Renewal_Terms__c</fullName>
    <description>Contract has Auto Renewal Terms, used in automations and to identify this Contract as having auto renewal terms. This will require user to fill out the Renewal Term field (SBQQ Renewal Term). Replaces Auto_renewal__c</description>
    <inlineHelpText>Contract has Auto Renewal Terms, used in automations and to identify this Contract as having auto renewal terms. This will require user to fill out the Renewal Term field</inlineHelpText>
    <label>Contract has Auto Renewal Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>