FLY wire David/force-app/main/default/objects/Contract/fields/Contract_NOT_in_gDrive__c.field-meta.xml
<CustomField>
    <fullName>Contract_NOT_in_gDrive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>QV or Ada could not locate the contract in gDrive</inlineHelpText>
    <label>Contract NOT in gDrive</label>
    <type>Checkbox</type>
</CustomField>