FLY wire David/force-app/main/default/objects/Contract/fields/Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Contract_URL__c</fullName>
    <description>Link to the Contract in Google Drive where Legal placed the Countersigned Document.</description>
    <inlineHelpText>Link to the Contract in Google Drive where Legal placed the Countersigned Document.</inlineHelpText>
    <label>Contract URL</label>
    <type>Url</type>
</CustomField>