FLY wire David/force-app/main/default/objects/Contract/fields/ContractLongID__c.field-meta.xml
<CustomField>
    <fullName>ContractLongID__c</fullName>
    <description>Contract LongID for Excel Vlookup</description>
    <formula>casesafeid(Id)</formula>
    <inlineHelpText>Contract LongID for Excel Vlookup</inlineHelpText>
    <label>ContractLongID</label>
    <type>Text</type>
</CustomField>