FLY wire David/force-app/main/default/objects/Contract/fields/CPQ_Contract__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links legacy Contracts related to new CPQ Contract record</description>
    <inlineHelpText>Links legacy Contracts related to new CPQ Contract record</inlineHelpText>
    <label>CPQ Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Legacy Contracts</relationshipLabel>
    <relationshipName>LegacyContracts</relationshipName>
    <type>Lookup</type>
</CustomField>