FLY wire David/force-app/main/default/objects/Contract/fields/CPQ_Contract_Migration_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Contract_Migration_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used for CPQ migration only</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for CPQ migration only</inlineHelpText>
    <label>CPQ Contract Migration External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>