FLY wire David/force-app/main/default/objects/Contract/fields/CPQ_Migration_Scenario__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Migration_Scenario__c</fullName>
    <description>CPQ data migration field only</description>
    <inlineHelpText>CPQ data migration field only</inlineHelpText>
    <label>CPQ Migration Scenario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>