FLY wire David/force-app/main/default/objects/Contract/fields/Custom_Missing_Fields__c.field-meta.xml
<CustomField>
    <fullName>Custom_Missing_Fields__c</fullName>
    <description>Used in Apex Class to store any required fields missing in the contract.</description>
    <inlineHelpText>Used in Apex Class to store any required fields missing in the contract.</inlineHelpText>
    <label>Custom Missing Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>