FLY wire David/force-app/main/default/objects/Contract/fields/Days_to_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_to_End_Date__c</fullName>
    <description>Field used to monitor the contract autorenewals</description>
    <formula>EndDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days until the contract ends</inlineHelpText>
    <label>Days to End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>