FLY wire David/force-app/main/default/objects/Contract/fields/Entity_Verified__c.field-meta.xml
<CustomField>
    <fullName>Entity_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Flywire entity has been verified.</inlineHelpText>
    <label>Entity Verified</label>
    <type>Checkbox</type>
</CustomField>