FLY wire David/force-app/main/default/objects/Contract/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <description>Does the Client have an exclusive relationship with Flywire.</description>
    <inlineHelpText>Check contract&apos;s Exclusivity section.</inlineHelpText>
    <label>Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>