FLY wire David/force-app/main/default/objects/Contract/fields/FlowMassUpdate__c.field-meta.xml
<CustomField>
    <fullName>FlowMassUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to Check or uncheck on all records to trigger on edit automations to run.</description>
    <inlineHelpText>Checkbox to Check or uncheck on all records to trigger on edit automations to run.</inlineHelpText>
    <label>FlowMassUpdate</label>
    <type>Checkbox</type>
</CustomField>