FLY wire David/force-app/main/default/objects/Contract/fields/Flywire_Entity__c.field-meta.xml
<CustomField>
    <fullName>Flywire_Entity__c</fullName>
    <description>Flywire entity the Contract was signed with.</description>
    <inlineHelpText>Select Flywire entity the Contract was signed with. This is not always the same as the country the client is in.</inlineHelpText>
    <label>Flywire Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flywire_Entity</valueSetName>
    </valueSet>
</CustomField>