FLY wire David/force-app/main/default/objects/Contract/fields/Is_Schedule_Flow_Checked__c.field-meta.xml
<CustomField>
    <fullName>Is_Schedule_Flow_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set when the schedule flow is run for Renewal Opportunity.</description>
    <inlineHelpText>This field is set when the schedule flow is run for Renewal Opportunity.</inlineHelpText>
    <label>Is Schedule Flow Checked</label>
    <type>Checkbox</type>
</CustomField>