FLY wire David/force-app/main/default/objects/Contract/fields/Marketing_OK__c.field-meta.xml
<CustomField>
    <fullName>Marketing_OK__c</fullName>
    <description>12/13/22: Relabeled as OBS, removed from page layouts. Replaced by &apos;Publicity&apos;.</description>
    <label>OBS_Marketing OK?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
            <value>
                <fullName>With Permission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>