FLY wire David/force-app/main/default/objects/Contract/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>QVC has found something about this record that needs further Review</inlineHelpText>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>