FLY wire David/force-app/main/default/objects/Contract/fields/Non_Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Terms__c</fullName>
    <description>Created for BOPI-309</description>
    <inlineHelpText>Describe any request that falls outside of standard pricing or other standard contract terms. This will trigger an approval request and may require new product configuration.</inlineHelpText>
    <label>Non-Standard Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>