FLY wire David/force-app/main/default/objects/Contract/fields/Not_Expired__c.field-meta.xml
<CustomField>
    <fullName>Not_Expired__c</fullName>
    <description>No Auto Renewal and Past Contract End Date</description>
    <formula>NOT(
AND(
TODAY() &gt;  EndDate,
ISPICKVAL(Auto_Renewal__c, &quot;No&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Expired</label>
    <type>Checkbox</type>
</CustomField>