FLY wire David/force-app/main/default/objects/Contract/fields/NS_Sub_Groups_Combined__c.field-meta.xml
<CustomField>
    <fullName>NS_Sub_Groups_Combined__c</fullName>
    <description>Concatenated comma-separated string representing the NS Subscription Group Id + NS ID for each subscription created in NS. BOPI-449</description>
    <inlineHelpText>Concatenated comma-separated string representing the NS Subscription Group Id + NS ID for each subscription created in NS</inlineHelpText>
    <label>NS Sub Groups_Combined</label>
    <length>255</length>
    <type>Text</type>
</CustomField>