FLY wire David/force-app/main/default/objects/Contract/fields/OBS_Flywire_Entity__c.field-meta.xml
<CustomField>
    <fullName>OBS_Flywire_Entity__c</fullName>
    <description>Flywire entity the Contract was signed with.
This field has been replaced with a new Flywire entity field that has a global picklist.</description>
    <inlineHelpText>Select Flywire entity the Contract was signed with. This is not always the same as the country the client is in.</inlineHelpText>
    <label>OBS Flywire Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flywire (Hong Kong) Limited</fullName>
            </value>
            <value>
                <fullName>Flywire (Singapore) Pte. Ltd</fullName>
            </value>
            <value>
                <fullName>Flywire Payments Canada Inc</fullName>
            </value>
            <value>
                <fullName>Flywire Europe UAB (LT)</fullName>
            </value>
            <value>
                <fullName>Flywire GK (Japan)</fullName>
            </value>
            <value>
                <fullName>Flywire Healthcare Corporation (US)</fullName>
            </value>
            <value>
                <fullName>Flywire Payments Corporation (US)</fullName>
            </value>
            <value>
                <fullName>Flywire Payments Ltd (UK)</fullName>
            </value>
            <value>
                <fullName>Flywire Serviços Ltda</fullName>
                <label>Flywire Serviços Ltda (Brazil)</label>
            </value>
            <value>
                <fullName>OnPlan Holdings LLC (pre-acquisition clients)</fullName>
            </value>
            <value>
                <fullName>WPM Payment Security Limited</fullName>
            </value>
            <value>
                <fullName>Flywire Mexico, S.A. de C.V.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>