FLY wire David/force-app/main/default/objects/Contract/fields/Opp_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Opp_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Opportunity is in progress for this contract in Draft.</inlineHelpText>
    <label>Opp In Progress</label>
    <type>Checkbox</type>
</CustomField>