FLY wire David/force-app/main/default/objects/Contract/fields/Override_Contract_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Override_Contract_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for BOPI-111</description>
    <inlineHelpText>Used to update field on creation of new Contract records to override validation rule requirements</inlineHelpText>
    <label>Override Contract Validation Rule</label>
    <type>Checkbox</type>
</CustomField>