FLY wire David/force-app/main/default/objects/Contract/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Payment Terms per contract. This should be kept the same as Quote and Order picklist values.</description>
    <inlineHelpText>How long does the client have to pay the invoice. Typically noted in contract as &quot;paid by Client within thirty (XX) days&quot;</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due on receipt</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>No Billing on this Contract</fullName>
            </value>
            <value>
                <fullName>Net30</fullName>
                <isActive>false</isActive>
                <label>Net30</label>
            </value>
            <value>
                <fullName>Net45</fullName>
                <isActive>false</isActive>
                <label>Net45</label>
            </value>
            <value>
                <fullName>Net60</fullName>
                <isActive>false</isActive>
                <label>Net60</label>
            </value>
            <value>
                <fullName>Net90</fullName>
                <isActive>false</isActive>
                <label>Net90</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>