FLY wire David/force-app/main/default/objects/Contract/fields/Publicity__c.field-meta.xml
<CustomField>
    <fullName>Publicity__c</fullName>
    <description>Check the Contract Publicity section and select if it&apos;s for services only or for services &amp; marketing.</description>
    <inlineHelpText>Check the Contract Publicity section and select if it&apos;s for services only or for services &amp; marketing.</inlineHelpText>
    <label>Publicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Services Only</fullName>
            </value>
            <value>
                <fullName>For Services &amp; Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>