FLY wire David/force-app/main/default/objects/Contract/fields/QVC_Note__c.field-meta.xml
<CustomField>
    <fullName>QVC_Note__c</fullName>
    <description>Field QVC_Notes__c updated to Admin notes for: SALDEV-1204
Field used to capture notes from Admins. Admins to add ticket number when making changes to records.</description>
    <inlineHelpText>Field used to capture notes from Admins. Admins to add ticket number when making changes to records.</inlineHelpText>
    <label>Admin Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>