FLY wire David/force-app/main/default/objects/Contract/fields/QVC_Updated__c.field-meta.xml
<CustomField>
    <fullName>QVC_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To use by QVC to check the contract records they have reviewed.</description>
    <inlineHelpText>Check if you have reviewed and acknowledge the data on this record is correct.</inlineHelpText>
    <label>QVC Updated-Verified</label>
    <type>Checkbox</type>
</CustomField>