FLY wire David/force-app/main/default/objects/Contract/fields/Ready_for_Recheck__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Recheck__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contract docs found or issue resolved. Ready to be reviewed and verified again.</inlineHelpText>
    <label>Ready for Recheck</label>
    <type>Checkbox</type>
</CustomField>