FLY wire David/force-app/main/default/objects/Contract/fields/Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Terms__c</fullName>
    <description>If the contract has auto renewal select if the renewal terms are 1 year. Otherwise, select Other and enter the details in &quot;Description&quot;.</description>
    <inlineHelpText>If the contract has auto renewal select if the renewal terms are 1 year. Otherwise, select Other and enter the details in &quot;Description&quot;.</inlineHelpText>
    <label>Renewal Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Auto_Renewal__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>