FLY wire David/force-app/main/default/objects/Contract/fields/Revenue_Share_Details__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Details__c</fullName>
    <description>Created for BOPI-339</description>
    <inlineHelpText>Insert link to table with tier details. Please include explanatory text to describe how the tiers work, when they reset, if they are marginal (like tax rates) or cumulative, etc. to appear on contract document</inlineHelpText>
    <label>Revenue Share Details</label>
    <type>TextArea</type>
</CustomField>