FLY wire David/force-app/main/default/objects/Contract/fields/SetStatusExpired__c.field-meta.xml
<CustomField>
    <fullName>SetStatusExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field is updated via schedule flow.</description>
    <inlineHelpText>The field is updated via schedule flow.</inlineHelpText>
    <label>SetStatusExpired</label>
    <type>Checkbox</type>
</CustomField>