FLY wire David/force-app/main/default/objects/Contract/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <description>Termination agreement per contract</description>
    <inlineHelpText>Termination agreement per contract</inlineHelpText>
    <label>Termination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>For Convenience</fullName>
            </value>
            <value>
                <fullName>For Cause Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>