FLY wire David/force-app/main/default/objects/Contract/fields/To_be_Deleted__c.field-meta.xml
<CustomField>
    <fullName>To_be_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>QVC or Ada thinks this Contract record can be deleted.</inlineHelpText>
    <label>To be Deleted</label>
    <type>Checkbox</type>
</CustomField>