FLY wire David/force-app/main/default/objects/Contract/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Select the Type of Legal Paper this Contract Record represents. 
Examples:

Contract &gt; Signed, Includes terms, products, etc.

Addendum &gt; Adding or removing Products.

Other Change &gt; Error correction, Notice of Entity Change, Other.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Other Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>