FLY wire David/force-app/main/default/objects/Contract/fields/Unique_Contract__c.field-meta.xml
<CustomField>
    <fullName>Unique_Contract__c</fullName>
    <description>For use on reports, summarize on field to get count</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>