FLY wire David/force-app/main/default/objects/Contract/fields/WPM_Annual_Hosting_Fee__c.field-meta.xml
<CustomField>
    <fullName>WPM_Annual_Hosting_Fee__c</fullName>
    <description>WPM Annual Hosting Fee per Contract entered in as Number not Currency this is in GBP</description>
    <inlineHelpText>WPM Annual Hosting Fee per Contract in GBP</inlineHelpText>
    <label>WPM Annual Hosting Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>