FLY wire David/force-app/main/default/objects/Contract/fields/WPM_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>WPM_Contract_Type__c</fullName>
    <description>WPM Contract Type</description>
    <inlineHelpText>WPM Contract Type</inlineHelpText>
    <label>WPM Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Platform+</fullName>
            </value>
            <value>
                <fullName>E-Payment</fullName>
            </value>
            <value>
                <fullName>Payment Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>