FLY wire David/force-app/main/default/objects/Contract/recordTypes/Client_Contract.recordType-meta.xml
<RecordType>
    <fullName>Client_Contract</fullName>
    <active>true</active>
    <description>Contract Record for a Sales Client</description>
    <label>Client Contract</label>
</RecordType>