FLY wire David/force-app/main/default/objects/Contract/validationRules/CantChangeActivatedContract.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeActivatedContract</fullName>
    <active>true</active>
    <description>No changes can be made to Activated/Executed comtract record. 9/22/23 Updating because Executed Contract were being updated, rule onnly triggered if in Activated Status before.
05/02/2025 Updated to exclude CPQ contracts</description>
    <errorConditionFormula>AND (
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    Price_Book_Name__c &lt;&gt; &apos;CPQ&apos;,
    OR(
        ISPICKVAL(PRIORVALUE(Status), &quot;Activated&quot;),
        ISPICKVAL(PRIORVALUE(Status), &quot;Executed&quot;)
    )
)</errorConditionFormula>
    <errorMessage>You can&apos;t change a Contract Record once it&apos;s been Activated. If the record is wrong please submit a ticket in Jira for your Salesforce Administrator and include the link to the Contract and changes needed.</errorMessage>
</ValidationRule>