FLY wire David/force-app/main/default/objects/Contract/validationRules/NoEditIfQVVerified.validationRule-meta.xml
<ValidationRule>
    <fullName>NoEditIfQVVerified</fullName>
    <active>false</active>
    <description>If QVC verified is checked lock the record to all but Admin</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;,  QVC_Updated__c = true)</errorConditionFormula>
    <errorMessage>***This Contract has been verified, Contact Ada is you need to change it.***</errorMessage>
</ValidationRule>