FLY wire David/force-app/main/default/objects/Contract/validationRules/URLnot_blank_to_Activate.validationRule-meta.xml
<ValidationRule>
    <fullName>URLnot_blank_to_Activate</fullName>
    <active>true</active>
    <description>Make sure the URL field is filled in prior to activating or executing the contract</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
ISPICKVAL(StatusCode,&quot;Activated&quot;),
ISBLANK(Contract_URL__c) 
)</errorConditionFormula>
    <errorMessage>You must include the link to the Contract on the Google Shared Legal Drive.</errorMessage>
</ValidationRule>