FLY wire David/force-app/main/default/objects/Contract/listViews/CPQ_Contracts_All.listView-meta.xml
<ListView>
    <fullName>CPQ_Contracts_All</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Type__c</columns>
    <columns>CPQ_Migrated_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.Name</field>
        <operation>equals</operation>
        <value>CPQ</value>
    </filters>
    <label>CPQ Contracts</label>
</ListView>